Improved layout styles, fixed spacings on mobile screens

--- a/style.css
+++ b/style.css
@@ -1,36 +1,26 @@
-body {
-
-}
-
 .page-content {
-max-width: 1000px;
-margin-left: auto;
-margin-right: auto;
-margin-top: 30px;
-margin-bottom: 30px;
+    max-width: 1000px;
+    margin: 2rem auto;
+    padding: 0 1rem;
 }
 
 .dark {
-color: #000000;
+    color: #000000;
 }
 
 iframe {
-max-width: 800px;
-width: 100%;
-max-height: 600px;
-min-height: 500px;
-
+    max-width: 800px;
+    width: 100%;
+    max-height: 600px;
+    min-height: 500px;
 }
 
 td {
-padding-right: 10px;
-padding-left: 10px;
-padding-top: 10px;
-padding-bottom: 10px;
+    padding: 0.5rem;
 }
 
 @media screen and (max-width: 1024px) {
     .page-content {
-    margin-top: 60px;
+    margin-top: 4rem;
     }
 }
